Edited: * HomeBlock.jinja * License.rst * Platform.rst

--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -5,18 +5,18 @@
 		Welcome to our computational platform. Here you will find a
 		number of one-page apps that could be used to tackle various
 		engineering problems. Please select the appropriate page/app from
-		the navigation bar on the top or choose one from the thumbnails above.
+		the navigation bar on the top or choose one from the thumbnails below.
 	</p>
 	<p>
-		We are currently at a major milestone: SmoWeb v. 1.0. To learn more about it
+		We are currently at a major milestone: SmoWeb v. 1.0. To learn more about it,
 		check our <a href = "/?model=Platform" target="_self">Platform</a> page. Here
 		you will learn more about the platform in general,
 		the current status and the development plans for the next release.
 	</p>
 	<p>
 		We are actively searching for partners for our future development. If you 
-		would like to collaborate with us please <a href = "http://www.sysmoltd.com/?q=contact">contact us</a>. 
-		We also appreciate any kind of feedback or suggestions relevant to the platform
+		would like to collaborate with us, please <a href = "http://www.sysmoltd.com/?q=contact">contact us</a>. 
+		We would also appreciate any kind of feedback or suggestions relevant to the platform
 		and the application modules.
 	</p>
 	<p>
