--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Platform.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Platform.html
@@ -12,14 +12,14 @@ applications with graphical user interface.</p>
 <div class="section" id="web-platform">
 <h2><strong>Web platform</strong></h2>
 <p>It runs on the web and does not require installation of any software
-by the user. All the computations are performed in the cloud</p>
+by the user. All the computations are performed in the cloud.</p>
 </div>
 <div class="section" id="open-source">
 <h2><strong>Open source</strong></h2>
 <p>The platform can be used under <a class="reference external" href="https://www.gnu.org/copyleft/gpl.html" target="_self">GPL</a> v.3 open source license,
-allowing anyone to use our code at his will; he can read, review, modify or
-contribute code to the platform or develop his own version of the platform,
-provided that he/she comply with the copyleft restrictions of the GPL licence.
+allowing anyone to use our code at their will; developers can read, review, modify or
+contribute code to the platform or develop their own version of the platform,
+provided that they comply with the copyleft restrictions of the GPL licence.
 Alternative licensing schemes can be negotiated. More information about it
 can be found <a class="reference external" href="/?model=License" target="_self">here</a>.</p>
 </div>
@@ -28,16 +28,16 @@ can be found <a class="reference external" href="/?model=License" target="_self"
 <p>Python was chosen as the implementation language because it is a powerful
 modern general purpose object-oriented language. Today it has
 become an inseparable part of scientific computing, due to the vast
-abundance of open source source python libraries and interfaces to major
-softwares. Cython is python extension, allowing to speed up critical parts
-of the software and provides easy interfacing to C/C++/Fortran libraries.</p>
+abundance of open source python libraries and interfaces to major
+software tools. Cython is a Python extension, allowing to speed up critical parts
+of the software and providing easy interfacing to C/C++/Fortran libraries.</p>
 </div>
 <div class="section" id="smoweb-applications">
 <h2><strong>SmoWeb Applications</strong></h2>
 <p>A number of applications have already been developed and are continously
-developed on top of the fucntionality provided by the platform. Currently
-these are mostly in the fields of thermodynamics, heat and fluid flow and
-transient bio-system modeling. Although, the platform is suitable for any kind
+being developed on top of the fucntionality provided by the platform. Currently
+these are mostly in the fields of thermodynamics, heat and fluid flow, and
+transient bio-system modeling. Although the platform is suitable for any kind
 of engineering modeling and simulation, the main focus is on system and process
 engieering.</p>
 <div class="line-block">
@@ -53,22 +53,22 @@ engieering.</p>
 <ul class="simple">
 <li><strong>Model definition</strong> consists of interface definition and computational implementation:<ul>
 <li>a NumericalModel is defined in python code with input and output fields</li>
-<li>fields can be a physical quantity (with units), boolean, text, choice, array record, data array etc.</li>
+<li>fields can be a physical quantity (with units), boolean, text, choice, record array, data array, etc.</li>
 <li>models can be inherited (expanded) or included as submodels in other models</li>
 <li>fields can be grouped in field groups, and field groups in super-groups to form a model view</li>
 <li>each NumericalModel has at least a single <tt class="docutils literal">compute</tt> method, which can be arbitrarily complex,
-and use the full power of Python language and all installed libraries</li>
+and uses the full power of Python language and all installed libraries</li>
 </ul>
 </li>
 <li>Automatic <strong>graphical user interface</strong> for the web browser<ul>
-<li>no html, java script or css necessary; comes out of the box with the model definition</li>
+<li>no html, javascript or css necessary; comes out of the box with the model definition</li>
 <li>a model can send model views with data to the browser</li>
 <li>hierarchical representation of the model with dialog groups and tabs</li>
 <li>numerical, boolean, text fields; choice selections from dropdown menus</li>
 <li>advanced editors for complex data structures (e.g. record array)</li>
 <li>the user interacts with the browser to edit the model values</li>
 <li>physical quantity editors have built-in unit conversion</li>
-<li>with the click of a button, the user can send data back and request the server to
+<li>at the click of a button, the user can send data back and request the server to
 perform a number of predefined model actions</li>
 <li>results from calculations are sent to the user for inspection</li>
 <li>simple fields, plots, tables and diagrams in the results</li>
@@ -77,7 +77,7 @@ perform a number of predefined model actions</li>
 <li>Advanced <strong>data storage</strong>:<ul>
 <li>model values can be automatically saved and retrieved from a database</li>
 <li>a unique link is generated for a saved model, and can be used to share model data</li>
-<li>schema-less Mongo data base: automatic storage for any data structure defined</li>
+<li>schema-less Mongo database: automatic storage for any data structure defined</li>
 <li>HDF5/Pandas storage for time series and other array data</li>
 </ul>
 </li>
@@ -117,14 +117,13 @@ on the Finite Volume Method</li>
 <div class="section" id="smoweb-2-0">
 <h1>SmoWeb 2.0</h1>
 <p>This is the current development plan for the next version of SmoWeb. We have deliberately planned
-more things than we will be able to implement, and later select a subset of them based on the resources
-we have available</p>
+more things than we will be able to implement, and will later select a subset of them based on the available resources</p>
 <div class="section" id="id1">
 <h2>Platform</h2>
 <ul class="simple">
 <li>Integration of Celery, a <strong>distributed task queue</strong><ul>
-<li>long running simulation tasks will be executed in background</li>
-<li>user will be updated continuously about the progress of the simulation</li>
+<li>long running simulation tasks will be executed in the background</li>
+<li>users will be updated continuously about the progress of the simulation</li>
 </ul>
 </li>
 <li>Dynamical simulation environment<ul>
