Included options for flow configuration in heat exchanger two streams
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/ThermodynamicComponentsDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/ThermodynamicComponentsDoc.html
@@ -135,8 +135,8 @@ C_r = \frac{\min\left(\dot{Q}_{1},\dot{Q}_{2}\right)}{\max\left(\dot{Q}_{1},\dot
 <p>The effectiveness formula depends on the flow configuration, as shown in the table below:</p>
 <table border="1" class="nice-table docutils">
 <colgroup>
-<col width="26%" />
-<col width="74%" />
+<col width="24%" />
+<col width="76%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">Flow configuration</th>
@@ -145,13 +145,13 @@ C_r = \frac{\min\left(\dot{Q}_{1},\dot{Q}_{2}\right)}{\max\left(\dot{Q}_{1},\dot
 </thead>
 <tbody valign="top">
 <tr><td>parallel flow</td>
-<td><span class="math">\(E \ = \frac {1 - \exp[-NTU(1 + C_{r})]}{1 + C_{r}}\)</span></td>
+<td><span class="math">\(\varepsilon \ = \frac {1 - \exp[-NTU(1 + C_{r})]}{1 + C_{r}}\)</span></td>
 </tr>
 <tr><td>counter-current flow</td>
-<td><span class="math">\(E \ = \frac {1 - \exp[-NTU(1 - C_{r})]}{1 - C_{r}\exp[-NTU(1 - C_{r})]}\)</span></td>
+<td><span class="math">\(\varepsilon \ = \frac {1 - \exp[-NTU(1 - C_{r})]}{1 - C_{r}\exp[-NTU(1 - C_{r})]}\)</span></td>
 </tr>
 <tr><td>evaporation / condensation</td>
-<td><span class="math">\(E \ = 1 - \exp[-NTU]\)</span></td>
+<td><span class="math">\(\varepsilon \ = 1 - \exp[-NTU]\)</span></td>
 </tr>
 </tbody>
 </table>
