TankModel - Temporary commit!
Signed-off-by: milen <milen_kb@abv.bg>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/CompressedGasStorageDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/CompressedGasStorageDoc.html
@@ -1,5 +1,5 @@
-<div class="document" id="tank-refueling-extraction">
-<h1 class="title">Tank: Refueling/Extraction</h1>
+<div class="document" id="compressed-gas-storage">
+<h1 class="title">Compressed Gas Storage</h1>
 <table class="docinfo" frame="void" rules="none">
 <col class="docinfo-name" />
 <col class="docinfo-content" />
