--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/CompressedGasStorageDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/CompressedGasStorageDoc.html
@@ -1,11 +1,7 @@
 <div class="document" id="compressed-gas-storage">
 <h1 class="title">Compressed Gas Storage</h1>
-<table class="docinfo" frame="void" rules="none">
-<col class="docinfo-name" />
-<col class="docinfo-content" />
-<tbody valign="top">
-<tr class="field"><th class="docinfo-name">TODO:</th><td class="field-body"></td>
-</tr>
-</tbody>
-</table>
+<div class="figure align-center">
+<img src="/static/ThermoFluids/img/ModuleImages/CompressedGasStorage.svg" style="width: 500px;">
+</img>
+</div>
 </div>
