Implemented some tablet responsiveness
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -380,3 +380,9 @@ div.tooltip-inner {
     white-space: normal;
     text-align: left;
 }
+
+@media (max-width: 991px) {
+	.col-sm-10 {
+	    width: 100%;
+	}
+}
