--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -23,6 +23,9 @@
 	<meta http-equiv="x-ua-compatible" content="IE=Edge"/> 
 
     <!--[if IE]><script src="{{ static('js/excanvas.js') }}"></script><![endif]-->
+    
+    
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 
 	<script>
 	  	$( document ).ready(function() {
@@ -37,6 +40,22 @@
 			      $(this).attr('src', $(this).attr('src').replace('.svg', '.png'));
 			  });
 			}
+		 	if (window.innerWidth < 992) {
+		 		$('#sideBarDiv').collapse('hide');
+		 		$('#sideBarButton').collapse('show');
+		 	} else {
+		 		$('#sideBarDiv').collapse('show');
+		 		$('#sideBarButton').collapse('hide');
+		 	}
+		 	$(window).resize(function(){
+		 		if (window.innerWidth < 992) {
+			 		$('#sideBarDiv').collapse('hide');
+			 		$('#sideBarButton').collapse('show');
+			 	} else {
+			 		$('#sideBarDiv').collapse('show');
+			 		$('#sideBarButton').collapse('hide');
+			 	}
+		 	});
 		});
 	  	
 	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -56,8 +75,9 @@
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"></button>
-          <a class="navbar-brand" href="/">SmoWeb</a>
+           <button id="sideBarButton" style="float: left;" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".sidebar-collapse"><span style="color: white;" class="caret"></span></button>
+           <button type="button" style="float: left;" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"><span style="color: white;" class="caret"></span></button>
+           <a class="navbar-brand" href="/">SmoWeb</a>
         </div>
       	<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav" >
@@ -67,16 +87,13 @@
 				    <li class="dropdown">
 				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{router.label}}<span class="caret"></span></a>
 				      <ul class="dropdown-menu" role="menu">
-					{% for pageName, viewClass in router.pages.iteritems() %}
-						<li><a href="/{{routerName}}/{{viewClass.__name__}}">{{viewClass.label}}</a></li>						
-					{% endfor %}
-<!-- 				        <li class="divider"></li> -->
-<!-- 				        <li class="dropdown-header">Nav header</li> -->
+						{% for pageName, viewClass in router.pages.iteritems() %}
+							<li><a href="/{{routerName}}/{{viewClass.__name__}}">{{viewClass.label}}</a></li>						
+						{% endfor %}
 				      </ul>
 				    </li>
 				    {% endif %}
-				{% endfor %}
-       		
+				{% endfor %}    		
         		{% endblock %}
 			</ul>
 			<div class="logo">
@@ -87,17 +104,21 @@
     </div>   
     <div class="container-fluid" id="content">
 		<div class="row">
-	        <div class="sidebar">
-	          <ul class="nav nav-sidebar">
-	            {% block pills %}
-	            {% endblock %}
-	          </ul>
-	          <div style="position: fixed; bottom: 10px;">
-	          	<div><a href="http://www.sysmoltd.com/?q=contact">Contact us</a></div>
-	          	<div><span class="text-muted">&copy; </span><a href="http://www.sysmoltd.com">SysMo Ltd.</a></div>
-	          </div>
-	        </div>
-			<div style="margin-left: 180px;">
+			<div class="col-sm-2">
+				<div id="sideBarDiv" class="sidebar-collapse collapse in" role="navigation">
+			        <div class="sidebar">
+				          <ul class="nav nav-sidebar">
+				            {% block pills %}
+				            {% endblock %}
+				          </ul>
+				          <div style="position: fixed; bottom: 10px;">
+				          	<div><a href="http://www.sysmoltd.com/?q=contact">Contact us</a></div>
+				          	<div><span class="text-muted">&copy; </span><a href="http://www.sysmoltd.com">SysMo Ltd.</a></div>
+				          </div>
+			        </div>
+			     </div>
+		     </div>
+		     <div class="col-sm-10">
 				<div style="display: none;" id="browserAlert" class="alert alert-danger alert-dismissible" role="alert">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 					<span aria-hidden="true">&times;</span></button>
