Changed from .presentation > .description style
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -250,7 +250,8 @@ body {
 
 .presentation > .description {
 	margin-top: 10px;
-	width: 500px;
+	padding-left: 20%;
+	padding-right: 20%;
 }
 
 /* Model Thumbnail */
