--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -62,9 +62,10 @@
 }
 
 /* View group TableView */
-/* .google-visualization-table.content > .top-level { */
+.google-visualization-table.content > .top-level {
 /* 	margin-right: 100px; */
-/* } */
+max-width: 80%;
+}
 
 
 /* Super group */
