Fixed Logo position
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -174,9 +174,9 @@ blockquote {
 
 /* Logo */
 .logo {
-	text-align: right; 
-	padding-top:10px; 
-	padding-bottom: 10px
+	padding-top: 10px; 
+	padding-bottom: 10px;
+	float: right;
 } 
 
 .logo img {
