--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -96,9 +96,9 @@
 				{% endfor %}    		
         		{% endblock %}
 			</ul>
-			<span class="logo">
+			<div class="logo">
           		<a href="http://www.sysmoltd.com"><img src="{{ static('img/SysMoLogo.png') }}"></a>
-        	</span>
+        	</div>
 		</div><!--/.nav-collapse -->
       </div>
     </div>   
