--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -98,8 +98,10 @@
 				    <li class="dropdown">
 				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{router.label}}<span class="caret"></span></a>
 				      <ul class="dropdown-menu" role="menu">
-						{% for pageName, viewClass in router.pages.iteritems() %}
-							<li><a href="/{{routerName}}/{{viewClass.__name__}}">{{viewClass.label}}</a></li>						
+						{% for pageName, pageViewClass in router.pages.iteritems() %}
+							{% if pageViewClass.showInMenu %}
+								<li><a href="/{{routerName}}/{{pageViewClass.__name__}}">{{pageViewClass.label}}</a></li>
+							{% endif %}						
 						{% endfor %}
 				      </ul>
 				    </li>
