--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -225,6 +225,12 @@ max-width: 80%;
 	font-size: medium;
 	color: black;
 }
+
+/* Record array */
+[smo-record-array] .nice-table {
+	margin: auto;
+}
+
 /* Record array and TableView editor */
 .record-array, .view-edit {
 	position: absolute;
