--- a/ThermoFluids/templates/ThermoFluids/blocks/TestPage.html
+++ b/ThermoFluids/templates/ThermoFluids/blocks/TestPage.html
@@ -1,5 +1,5 @@
 <div class="progress">
-  <div id="testBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-  aria-valuenow="{{progressValue}}" ng-bind="progressValue" aria-valuemin="0" aria-valuemax="100">
+  <div id="testBar" class="progress-bar progress-bar-info" role="progressbar"
+  aria-valuenow="{{progressValue}}" ng-bind="progressValue" aria-valuemin="0" aria-valuemax="100" style="color: black;">
   </div>
 </div>
