--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -56,6 +56,7 @@
 			 		$('#sideBarButton').collapse('hide');
 			 	}
 		 	});
+		 	$('[data-toggle="tooltip"]').tooltip();
 		});
 	  	
 	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
